<resources>
    <string name="app_name">Test_App_0</string>
    <string name="edit_message">enter a msg</string>
    <string name="button_send">SEND IT</string>
    <string name="button_go_to_card_activity">Go to card activity</string>
    <string name="edit_num_cards">enter # of cards</string>
    <string name="button_go_to_dynamic_test_1">go to dynamic test 1</string>
    <string name="button_go_to_dynamic_test_2">go to dynamic test 2</string>
    <string name="button_go_to_action_bar_test_1">Go to action bar test 1</string>
    <string name="title_activity_action_bar1">actionBar1Activity</string>
    <string name="title_name_card_activity">Name Card</string>
    <string name="edit_enter_card_name">Enter Card Name</string>
    <string name="button_make_new_card">Make New Card</string>
    <string name="button_go_to_static_cards_0">Go To Static Cards 0</string>
    <string name="button_go_to_save_data_activity">Go to save data activity</string>
    <string name="spinner_option_color_red">\RED\</string>
    <string name="spinner_option_color_blue">\BLUE\</string>
    <string name="spinner_option_color_green">\GREEN\</string>
    <string name="button_add_card">Add Card</string>
</resources>
